--- a/index.html
+++ b/index.html
@@ -35,11 +35,18 @@
             </div>
         </nav>
         <div class="hero">
-                <h1>Kgotso Makhalimele</h1>
-                <h3>Software Developer</h3>
+            <h1>Kgotso Makhalimele</h1>
+            <h3>Software Developer</h3>
+            
+            <div class="hero-container">
+                <div class="intro">
+                    <p>My name is Kgotso and I enjoy building apps that can make a positive impact on our lives.</p>
+                </div>
+                <div class="picture"><img src="./images/profile-small.jpeg" alt="Photo of Kgotso"></div>
+            </div>
 
-                <p>My name is Kgotso and I enjoy building apps that can make a positive impact on our lives.</p>
         </div>
+
     </header>
 
 </body>
