added about section

--- a/index.html
+++ b/index.html
@@ -37,17 +37,35 @@
         <div class="hero">
             <h1>Kgotso Makhalimele</h1>
             <h3>Software Developer</h3>
-            
+
             <div class="hero-container">
                 <div class="intro">
-                    <p>My name is Kgotso and I enjoy building apps that can make a positive impact on our lives.</p>
+                    <p>I enjoy building apps that can make a positive impact on our lives. My main interest is creating
+                        and contributing to the creation of software in a way that makes a difference.</p>
+
                 </div>
-                <div class="picture"><img src="./images/profile-small.jpeg" alt="Photo of Kgotso"></div>
             </div>
 
-        </div>
 
     </header>
+    <section id="about">
+        <div class="abt-section">
+            <h2>About me</h2>
+            <p>I am passionate about software development and it has gone from a hobby into something that I want to
+                pursue professionally. I've done a few projects using Python, HTML, CSS and Java.</p>
+            <p>The process of
+                learning is what keeps me wanting to explore more topics and learn more about new technologies and what
+                can be built with them.</p>
+            <p>When I'm not coding I enjoy exercising, watching sport and nature channels as
+                well as spending time with friends and family. Sometimes I write as well.</p>
+
+        </div>
+        <div class="picture">
+            <img src="./images/profile-small.jpeg" alt="Photo of Kgotso"></div>
+        </div>
+
+
+    </section>
 
 </body>
 
