--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header id="top">
         <nav class="navbar">
-            <h1 class="logo" href="#top">KM</h1>
+            <a href="#top"><h1 class="logo">KM</h1></a>
             <div class="navbar-container container">
                 <input type="checkbox">
                 <div class="hamburger-lines">
@@ -48,22 +48,79 @@
 
 
     </header>
+
     <section id="about">
+        <h2>About me</h2>
+        <span class="head-underline"></span>
         <div class="abt-section">
-            <h2>About me</h2>
-            <p>I am passionate about software development and it has gone from a hobby into something that I want to
-                pursue professionally. I've done a few projects using Python, HTML, CSS and Java.</p>
-            <p>The process of
-                learning is what keeps me wanting to explore more topics and learn more about new technologies and what
-                can be built with them.</p>
-            <p>When I'm not coding I enjoy exercising, watching sport and nature channels as
-                well as spending time with friends and family. Sometimes I write as well.</p>
+            <div>
+                <p>Software Development started off as something that I was curious about and has become what I want to
+                    pursue professionally. I've done a few projects using CSS, HTML, Java and Python.</p>
+                <p>When I'm not coding I enjoy exercising, watching sport and spending time with friends and family. Sometimes I write as well.</p>
+            </div>
+
+            <div class="picture">
+                <img src="./images/profile-small.jpeg" alt="Photo of Kgotso">
+            </div>
 
         </div>
-        <div class="picture">
-            <img src="./images/profile-small.jpeg" alt="Photo of Kgotso"></div>
+        <div class="education">
+            <h3>Education and Certificates</h3>
+            <p>Software Development: CodeSpace Academy (In Progress)</p>
+            <p>Pandas Course: Kaggle</p>
+            <p>Introduction to Python For Data Engineering: Dataquest</p>
+        </div>
         </div>
 
+    </section>
+
+    <section id="skills">
+        <h2>Skills</h2>
+        <span class="head-underline"></span>
+        <div class="skill-container">
+            <div class="webdev">
+            </div>
+            <div class="python">
+            </div>
+            <div class="java">
+            </div>
+        </div>
+    </section>
+
+    <section id="projects">
+        <h2>Projects</h2>
+        <span class="head-underline"></span>
+
+        <div class="projects-container">
+
+            <div class="first-project">
+                <h4>
+                    Project 1
+                </h4>
+                <p>placeholder</p>
+            </div>
+
+            <div class="second-project">
+                <h4>
+                    Project 2
+                </h4>
+                <p>placeholder</p>
+            </div>
+
+            <div class="third-project">
+                <h4>
+                    Project 3
+                </h4>
+                <p>placeholder</p>
+            </div>
+
+            <div class="fourth-project">
+                <h4>
+                    Project 4
+                </h4>
+                <p>placeholder</p>
+            </div>
+        </div>
 
     </section>
 
