--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 <body>
     <header id="top">
         <nav class="navbar">
-            <a href="#top"><h1 class="logo">KM</h1></a>
+            <a href="#top">
+                <h1 class="logo">KM</h1>
+            </a>
             <div class="navbar-container container">
                 <input type="checkbox">
                 <div class="hamburger-lines">
@@ -44,6 +46,12 @@
                         and contributing to the creation of software in a way that makes a difference.</p>
 
                 </div>
+                <div class="right">
+                    <a href="https://medium.com/@kgotsom" target="_blank"><img src="./images/github-mark-white.png"
+                            alt="Github Logo" class="gh-logo"></a>
+                    <a href="https://github.com/kgotsosm" target="_blank"><img
+                            src="./images/Medium-Symbol-White-RGB@4x.png" alt="Medium logo" class="med-logo"></a>
+                </div>
             </div>
 
 
@@ -56,7 +64,8 @@
             <div>
                 <p>Software Development started off as something that I was curious about and has become what I want to
                     pursue professionally. I've done a few projects using CSS, HTML, Java and Python.</p>
-                <p>When I'm not coding I enjoy exercising, watching sport and spending time with friends and family. Sometimes I write as well.</p>
+                <p>When I'm not coding I enjoy exercising, watching sport and spending time with friends and family.
+                    Sometimes I write as well.</p>
             </div>
 
             <div class="picture">
@@ -88,42 +97,82 @@
     </section>
 
     <section id="projects">
+
         <h2>Projects</h2>
+        <p>Click the boxes below to view my projects on <a href="https://github.com/kgotsosm">GitHub.</a></p>
         <span class="head-underline"></span>
-
-        <div class="projects-container">
-
-            <div class="first-project">
-                <h4>
-                    Project 1
-                </h4>
-                <p>placeholder</p>
+        <div class="project-container">
+            <div class="coffee">
+                <a href="https://github.com/kgotsosm/Hyperskill-Java" target="_blank">
+                    <div class="content">
+                        <h3>Coffee Machine</h3>
+                        <p>The backend of a coffee machine written in Java.</p>
+                    </div>
+                </a>
             </div>
-
-            <div class="second-project">
-                <h4>
-                    Project 2
-                </h4>
-                <p>placeholder</p>
+            <div class="scraper">
+                <a href="https://github.com/kgotsosm/Python_web_scraper" target="_blank">
+                    <div class="content">
+                        <h3>Web Scraper</h3>
+                        <p>A web scraper for nature.com in Python.</p>
+                    </div>
+                </a>
             </div>
-
-            <div class="third-project">
-                <h4>
-                    Project 3
-                </h4>
-                <p>placeholder</p>
-            </div>
-
-            <div class="fourth-project">
-                <h4>
-                    Project 4
-                </h4>
-                <p>placeholder</p>
+            <div class="puddle">
+                <a href="https://github.com/kgotsosm/Puddle" target="_blank">
+                    <div class="content">
+                        <h3>Online Store</h3>
+                        <p>E-commerce store using Django framework.</p>
+                    </div>
+                </a>
             </div>
         </div>
 
+
     </section>
 
+    <section id="contact">
+        <h2>Get In Touch</h2>
+        <h4>Send an email and click the links below to view my Github and Medium pages</h4>
+        <span class="head-underline"></span>
+
+        <div class="form-container">
+            <div class="contact-box">
+                <div class="left">
+
+                    <form action="https://formsubmit.co/89737a9d4e3728a89635b0fd1fb8efb8" method="POST">
+
+                        <label for="subject">Subject</label>
+                        <select id="subject" class="field" name="subject" required>
+                            <option value="" disabled selected>Select a subject:</option>
+                            <option value="Interview Opportunity">Interview Opportunity</option>
+                            <option value="Collaboration Request">Collaboration Request</option>
+                            <option value="Website Feedback">Website Feedback</option>
+                        </select>
+
+                        <label for="name">Your Name</label>
+                        <input type="text" class="field" id="name" name="name" placeholder="Your Name:" required>
+
+                        <label for="email">Email</label>
+                        <input type="email" class="field" id="email" name="email" placeholder="Your Email:" required>
+
+                        <label for="message">Message</label>
+                        <textarea id="message" class="field" name="message"
+                            placeholder="Type your message here..."></textarea>
+
+                        <button type="submit" class="button" class target="_blank">Send</button>
+                    </form>
+
+                </div>
+                <div class="right">
+                    <a href="https://medium.com/@kgotsom" target="_blank"><img src="./images/github-mark-white.png"
+                            alt="Github Logo" class="gh-logo"></a>
+                    <a href="https://github.com/kgotsosm" target="_blank"><img
+                            src="./images/Medium-Symbol-White-RGB@4x.png" alt="Medium logo" class="med-logo"></a>
+                </div>
+            </div>
+        </div>
 </body>
+<footer><h4>Kgotso Makhalimele, 2023</h4></footer>
 
 </html>
