--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
 
                 </div>
                 <div class="right">
-                    <a href="https://medium.com/@kgotsom" target="_blank"><img src="./images/github-mark-white.png"
+                    <a href="https://github.com/kgotsom" target="_blank"><img src="./images/github-mark-white.png"
                             alt="Github Logo" class="gh-logo"></a>
-                    <a href="https://github.com/kgotsosm" target="_blank"><img
+                    <a href="https://medium.com/@kgotsosm" target="_blank"><img
                             src="./images/Medium-Symbol-White-RGB@4x.png" alt="Medium logo" class="med-logo"></a>
                 </div>
             </div>
-
+        </div>
 
     </header>
 
@@ -79,7 +79,7 @@
             <p>Pandas Course: Kaggle</p>
             <p>Introduction to Python For Data Engineering: Dataquest</p>
         </div>
-        </div>
+
 
     </section>
 
@@ -133,7 +133,7 @@
 
     <section id="contact">
         <h2>Get In Touch</h2>
-        <h4>Send an email and click the links below to view my Github and Medium pages</h4>
+        <h4>Use the form or send an email to kgotsom@protonmail.com</h4>
         <span class="head-underline"></span>
 
         <div class="form-container">
@@ -165,14 +165,17 @@
 
                 </div>
                 <div class="right">
-                    <a href="https://medium.com/@kgotsom" target="_blank"><img src="./images/github-mark-white.png"
+                    <a href="https://github.com/kgotsom" target="_blank"><img src="./images/github-mark-white.png"
                             alt="Github Logo" class="gh-logo"></a>
-                    <a href="https://github.com/kgotsosm" target="_blank"><img
+                    <a href="https://medium.com/@kgotsosm" target="_blank"><img
                             src="./images/Medium-Symbol-White-RGB@4x.png" alt="Medium logo" class="med-logo"></a>
                 </div>
             </div>
         </div>
 </body>
-<footer><h4>Kgotso Makhalimele, 2023</h4></footer>
+<footer>
+    <h4>Kgotso Makhalimele, 2023</h4>
+    <p>kgotsom@protonmail.com</p>
+</footer>
 
 </html>
